--- a/package.json
+++ b/package.json
@@ -1,19 +1,17 @@
 {
-  "name": "xmlhttprequest",
-  "description": "XMLHttpRequest for Node",
+  "name": "@davidwu226/xmlhttprequest",
+  "description": "Fork of XMLHttpRequest for Node that allows custom User-Agent headers",
   "version": "1.8.0",
   "author": {
-    "name": "Dan DeFelippi",
-    "url": "http://driverdan.com"
+    "name": "David Wu",
   },
   "keywords": ["xhr", "ajax"],
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git://github.com/driverdan/node-XMLHttpRequest.git"
+    "url": "git://github.com/davidwu226/node-XMLHttpRequest.git"
   },
   "browser": "./lib/browser.js",
-  "bugs": "http://github.com/driverdan/node-XMLHttpRequest/issues",
   "engines": {
     "node": ">=0.4.0"
   },
